# users-tasks-fastapi

./: .env.example  Dockerfile  README.md  compose.yml  config.py  environment.py  main.py  pyproject.toml  requirements.txt
api/: database.py  main.py
api/task/: task_model.py  task_router.py  task_service.py
api/user/: user_model.py  user_router.py  user_service.py
app/: errors.py  main.py  middleware.py
app/auth/: dependencies.py  routes.py  service.py  utils.py
app/core/: config.py  db.py  limiter.py  utils.py
app/roles/: model.py  routes.py  service.py
app/tasks/: model.py  routes.py  service.py
app/users/: model.py  routes.py  service.py
core/: security.py
src/: errors.py  middleware.py
src/auth/: dependencies.py  middleware.py  model.py  routes.py  service.py  utils.py
src/auth/dependencies/: local_auth.py  token_bearer.py
src/core/: config.py  db.py  utils.py
src/db/: main.py
src/roles/: model.py  routes.py  service.py
src/tasks/: model.py  routes.py  service.py
src/users/: model.py  routes.py  service.py
